# WCN_MATH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.build-dst.bat  make.build-no_dst.bat  make.build-wasm.bat  make.build-wasm.sh  make.example.py
examples/: B.c  DST_MOD.cpp  DST_MOD_CPP.cpp  DST_MOD_CPP_Z.cpp  R.c  wcn_math_cpp.cpp
include/WCN/: Rtype.h  Test.js  WCN_MATH_CPP.hpp  WCN_MATH_CPP_COMMON.hpp  WCN_MATH_DST.h  WCN_MATH_DST_CLASS.hpp  WCN_MATH_DST_CPP.hpp  WCN_MATH_IMAGE.h  WCN_MATH_MACROS.h  WCN_MATH_SOA.h  WCN_MATH_TYPES.h  WCN_Math.h  WCN_PLATFORM_MACROS.h
src/: wcn_math_mat3.c  wcn_math_other.c  wcn_math_quat.c  wcn_math_vec3.c  wcn_math_vec4.c
src/common/: wcn_math_base.c  wcn_math_globals.c  wcn_math_internal.h
src/dst/: wcn_math_image.c  wcn_math_mat3.c  wcn_math_mat4.c  wcn_math_other.c  wcn_math_quat.c  wcn_math_vec2.c  wcn_math_vec2xn.c  wcn_math_vec3.c  wcn_math_vec4.c  wcn_math_vec4xn.c  wcn_math_wasm.c
src/no_dst/: wcn_math_mat3.c  wcn_math_mat4.c  wcn_math_other.c  wcn_math_quat.c  wcn_math_vec2.c  wcn_math_vec3.c  wcn_math_vec4.c
